alterando AluraFlix para 14044Music

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap" rel="stylesheet">
-<title>Aluraflix</title>
+<title>14044Music</title>
 </head>
 
 
@@ -14,7 +14,7 @@
 <body>
 
 
-<header>ALURAFLIX</header>
+<header>14044Music</header>
 
  <section class="chamada">
 <div class="chamada-texto">
